<resources>
    <string name="app_name">BookManager</string>

    <!--'\u0020' is a blankspace - strings are always trimmed-->

    <string name="placeholder_string">**Placeholder**</string>
    <string name="placeholder_number">#N</string>

    <string name="details_title">Title:\u0020</string>
    <string name="details_author">Author:\u0020</string>
    <string name="details_course">Course:\u0020</string>
    <string name="details_price">Price:\u0020</string>
    <string name="details_ISBN">ISBN:\u0020</string>

    <string name="details_currency">SEK</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="placeholder_title">E.g Dragons nest</string>
    <string name="placeholder_author">E.g Dickens, Charles</string>
    <string name="placeholder_course">E.g English 101</string>
    <string name="placeholder_price">E.g 499</string>
    <string name="placeholder_ISBN">E.g 123456789</string>

    <string name="summary_bookCount">\u0020books in your library.</string>
    <string name="summary_totalCost">Total cost:\u0020</string>
    <string name="summary_mostExpensive">Most expensive item:\u0020</string>
    <string name="summary_leastExpensive">Least expensive item:\u0020</string>
    <string name="summary_avaragePrice">Avarage price:\u0020</string>
    <string name="add_book">Add Book</string>
    <string name="SHARED_PREFS_TAG">SHARED_PREFS</string>
    <string name="collection_title">Your book collection</string>
    <string name="tabs_collection">Collection</string>
    <string name="tabs_summary">Summary</string>
    <string name="detail_text_title">Title</string>
    <string name="detail_text_author">Author</string>
    <string name="detail_text_isbn">ISBN</string>
    <string name="detail_text_price">Price</string>
    <string name="detail_text_course">Course</string>
    <string name="edit_book">Edit book</string>
    <string name="delete_book">Delete book</string>
</resources>
