<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group5.bookmanager2.AddBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TableRow>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv1"
                    style="@style/Padded_TitleText"
                    android:text="@string/details_title" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/addBook_title"
                    style="@style/NormalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight=".6"
                    android:hint="@string/placeholder_title" />

            </TableRow>
            <TableRow>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv2"
                    style="@style/Padded_TitleText"
                    android:text="@string/details_author" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/addBook_author"
                    style="@style/NormalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight=".6"
                    android:hint="@string/placeholder_author" />

            </TableRow>
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv3"
                    style="@style/Padded_TitleText"
                    android:text="@string/details_course"
                    />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/addBook_course"
                    style="@style/NormalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight=".6"
                    android:hint="@string/placeholder_course" />

            </TableRow>
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv4"
                    android:text="@string/details_ISBN"
                    style="@style/Padded_TitleText"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/addBook_ISBN"
                    style="@style/NormalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight=".6"
                    android:hint="@string/placeholder_ISBN" />

            </TableRow>
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv5"
                    android:text="@string/details_price"
                    style="@style/Padded_TitleText"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/addBook_price"
                    style="@style/NormalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight=".6"
                    android:hint="@string/placeholder_price"
                    android:inputType="number"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/addBook_currency"
                    android:text="@string/details_currency"
                    style="@style/Padded_NormalText"
                    android:layout_weight="0.4"/>

            </TableRow>
            <TableRow>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:onClick="done"
                    android:text="@string/done" />
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight=".6"
                    android:background="@color/colorAccent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:onClick="cancel"
                    />

            </TableRow>
        </TableLayout>
    </LinearLayout>



</android.widget.RelativeLayout>