<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobilecomputing.bookmanager.SummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="4">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:text="@string/summary_totalCost"
                style="@style/TitleText"
                android:layout_centerVertical="true"
                android:layout_column="0"
                android:layout_row="0"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/summary_totalCost"
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tv1"
                android:text="Placeholder Title"
                android:layout_column="1"
                android:layout_row="0" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:text="@string/summary_mostExpensive"
                style="@style/TitleText"
                android:layout_centerVertical="true"
                android:layout_column="0"
                android:layout_row="1"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/summary_mostExpensive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Placeholder Author"
                style="@style/NormalText"
                android:layout_toEndOf="@id/tv2"
                android:layout_centerVertical="true"
                android:layout_column="1"
                android:layout_row="1"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv3"
                android:text="@string/Summary_leastExpensive"
                style="@style/TitleText"
                android:layout_centerVertical="true"
                android:layout_column="0"
                android:layout_row="2"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/summary_leastExpensive"
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tv3"
                android:text="Placeholder Course"
                android:layout_column="1"
                android:layout_row="2" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv4"
                android:text="@string/summary_avaragePrice"
                style="@style/TitleText"
                android:layout_centerVertical="true"
                android:layout_column="0"
                android:layout_row="3"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/summary_avaragePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Placeholder Price"
                style="@style/NormalText"
                android:layout_toEndOf="@id/tv4"
                android:layout_centerVertical="true"
                android:layout_column="1"
                android:layout_row="3"/>
        </GridLayout>

    </LinearLayout>



</android.widget.RelativeLayout>
